--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
     tools:context="com.liwenwei.android.servicedemo.MainActivity">
 
     <Button
@@ -12,5 +13,11 @@
         android:layout_height="wrap_content"
         android:text="Start Service"
         android:onClick="startMyService"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Notification"
+        android:onClick="startMyNotification"/>
 
 </LinearLayout>
